TESTS =
SUBDIRS = builder
lib_LTLIBRARIES = libaxis2_wsdl.la
libaxis2_wsdl_la_SOURCES = wsdl_op.c \
                        wsdl_svc.c \
                        wsdl_component.c \
                        wsdl_feature.c \
                        wsdl_property.c \
                        wsdl_extensible_component.c \
                        wsdl_interface.c \
                        wsdl_binding_fault.c \
                        wsdl_binding_msg_ref.c \
                        wsdl_binding_op.c \
                        wsdl_binding.c \
                        wsdl_msg_ref.c \
                        wsdl_endpoint.c \
                        wsdl_fault_ref.c \
                        wsdl_extensible_element.c \
                        wsdl_extensible_attribute.c \
                        wsdl_soap_op.c \
                        wsdl_types.c \
                        wsdl_import.c \
                        wsdl_include.c \
                        wsdl_desc.c \
                        wsdl_ext_soap_body.c \
                        wsdl_ext_soap_header.c \
                        wsdl_ext_soap_binding.c \
                        wsdl_ext_soap_address.c \
                        wsdl_ext_soap_op.c

INCLUDES = -I$(top_builddir)/include \
            -I$(top_builddir)/modules/util \
            -I$(top_builddir)/modules/platforms

EXTRA_DIST=woden
