# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
# 
#   http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# AXIS2C-1338: Removed datadir=$(prefix)/bin/tools/tcpmon and data_DATA
# which incorrectly created subdirectories under bin. Documentation files
# are in EXTRA_DIST for distribution but don't need separate installation.
SUBDIRS = src
includedir=$(prefix)/include/axis2-${PACKAGE_VERSION}
include_HEADERS=$(top_srcdir)/include/*.h
EXTRA_DIST=LICENSE
